actualice pagina css y html

--- a/drescode_indexes/productos.html
+++ b/drescode_indexes/productos.html
@@ -110,3 +110,78 @@
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                     </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/taza_father.jpeg" class="card-img-top align-self-center imagen-producto" alt="taza father"/>
+                                <div class="card-body">
+                                <h5 class="card-title">Taza Father</h5>
+                                <div class="accordion" id="accordion4">
+                                    <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                                        Descripcion
+                                        </button>
+                                    </h2>
+                                    <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordion4">
+                                        <div class="accordion-body">
+                                            ¿Listo para hacer una oferta que no se puede rechazar en el mundo de la programación? Presentamos "The Code Father" en nuestra exclusiva Taza Negra con letras blancas y un toque de estilo "El Padrino".
+
+                                            Esta taza rinde homenaje al legendario "El Padrino" pero con un giro tecnológico. Presenta el texto "The CodeFather" en letras blancas elegantes sobre un fondo negro, una combinación que refleja tu dominio en el mundo del código. Fabricada con cerámica de alta calidad, esta taza es resistente y duradera. La impresión de letras blancas en contraste destaca sobre el fondo negro, lo que la hace aún más llamativa. Con una capacidad estándar de taza de café, es perfecta para tu bebida favorita, ya sea café, té o algo más fuerte para esas largas sesiones de codificación. Ya sea en la oficina, en casa o en una reunión de desarrolladores, esta taza será el centro de atención y un punto de partida para conversaciones sobre la programación y la tecnología.
+                                            ¿Conoces a un programador o desarrollador al que le encantaría esta taza? Es un regalo ideal para cumpleaños, ocasiones especiales o simplemente para sorprender a un "Padrino del Código" en tu vida.
+                                            Agrega un toque de elegancia y humor a tu espacio de trabajo o a tu rutina matutina con esta taza única. Es un recordatorio de que eres un "Padrino del Código" y que tienes el control en el mundo de la programación. ¡Haz tu pedido hoy mismo y prepárate para codear con estilo!
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                    </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/remera_null.jpeg" class="card-img-top align-self-center imagen-producto" alt="remera null"/>
+                            <div class="card-body">
+                            <h5 class="card-title">Remera Null</h5>
+                            <div class="accordion" id="accordion5">
+                                <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                                    Descripcion
+                                    </button>
+                                </h2>
+                                <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#accordion5">
+                                    <div class="accordion-body">
+                                        ¡Haz una declaración de estilo y programación con nuestra Camiseta "null"!
+
+                                            Esta camiseta es perfecta para aquellos que aprecian la simplicidad y tienen un amor por la codificación. Con un diseño fresco y elegante, esta prenda te permite llevar tu pasión por la tecnología de una manera creativa y única. Presenta la palabra "null" en letras verdes de aspecto fresco y moderno en la parte delantera. Este símbolo es conocido en la programación como un valor nulo, lo que la hace perfecta para aquellos que entienden su significado. Fabricada con algodón suave y de alta calidad, esta camiseta ofrece comodidad durante todo el día. El ajuste clásico garantiza que te veas y te sientas genial. Es versátil y se adapta a cualquier ocasión. Puedes usarla con jeans, pantalones cortos o incluso bajo una chaqueta.
+                                            Regalo Ideal: ¿Conoces a un programador, desarrollador o entusiasta de la tecnología? Esta camiseta es el regalo perfecto que les mostrará tu aprecio por su pasión.
+                                            Añade un toque de programación a tu estilo diario con esta camiseta única. Ya sea que estés trabajando en un proyecto de software o simplemente deseas destacar tu amor por la tecnología, "null" es la declaración perfecta. ¡Haz tu pedido hoy mismo y muestra tu conexión con el mundo de la codificación!
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                    </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/mochila_code.jpeg" class="card-img-top align-self-center imagen-producto" alt="mochila code"/>
+                        <div class="card-body">
+                        <h5 class="card-title">Mochila Code</h5>
+                        <div class="accordion" id="accordion6">
+                            <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                                Descripcion
+                                </button>
+                            </h2>
+                            <div id="collapse6" class="accordion-collapse collapse" data-bs-parent="#accordion6">
+                                <div class="accordion-body">
+                                    ¡Lleva tu amor por la programación a todas partes con nuestra mochila "I Got These Muscles Writing Code"!
+
+                                    Esta mochila es el accesorio perfecto para los apasionados de la programación y la tecnología. Con un diseño elegante en color negro y un toque de humor, esta mochila te permite llevar tus pertenencias de forma segura mientras compartes tu pasión por la codificación.
+                                    El bolsillo delantero de la mochila presenta el divertido lema "I Got These Muscles Writing Code" en letras blancas. Con varios compartimentos y un amplio espacio interior, esta mochila es ideal para llevar tu laptop, libros, dispositivos electrónicos y más. Mantén tus pertenencias organizadas y a mano. Las correas ajustables y acolchadas te brindan comodidad durante todo el día, ya sea que estés yendo a la universidad, al trabajo o a un espacio de coworking. La mochila está diseñada para ofrecer comodidad y estilo.
+                                    Lleva tu equipo de programación, tus libros o cualquier cosa que necesites con estilo y humor. ¡Haz tu pedido hoy mismo y muestra al mundo tus "músculos" de programador con orgullo
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
