finalizacion html css pag productos

--- a/drescode_indexes/productos.html
+++ b/drescode_indexes/productos.html
@@ -185,3 +185,127 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/taza_idiot.jpeg" class="card-img-top align-self-center imagen-producto" alt="taza idiot"/>
+                        <div class="card-body">
+                        <h5 class="card-title">Taza idiot</h5>
+                        <div class="accordion" id="accordion7">
+                            <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
+                                Descripcion
+                                </button>
+                            </h2>
+                            <div id="collapse7" class="accordion-collapse collapse" data-bs-parent="#accordion7">
+                                <div class="accordion-body">
+                                    ¡Añade un toque de humor y reflexión a tus mañanas con nuestra Taza "El Ciclo Interminable"
+
+                                    Esta taza presenta un ciclo humorístico que todos hemos experimentado en algún momento de nuestras vidas. Comienza con un enigmático "WHY?" (¿Por qué?), seguido de un "What the Hell" (¿Qué diablos?) y luego al "I am an Idiot" (Soy un idiota). Es un recordatorio de que la vida a veces nos hace cuestionarnos y reírnos de nosotros mismos. Fabricada en cerámica de alta calidad, esta taza es resistente y apta para microondas y lavavajillas. El diseño único y los colores vibrantes perduran con el tiempo. Con su capacidad estándar de taza de café, es ideal para disfrutar de tu bebida favorita mientras reflexionas sobre la vida y sus giros inesperados. ¿Conoces a alguien que siempre se pregunta "¿Por qué?" y se ríe de las situaciones absurdas de la vida? Esta taza es el regalo perfecto que les hará sonreír.
+                                    Agrega una dosis de humor a tus mañanas con esta taza única que representa el ciclo interminable de preguntas de la vida. ¡Haz tu pedido hoy mismo y prepárate para disfrutar de tus bebidas con un toque de diversión y reflexión!
+                            </div>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/gorra_head.jpeg" class="card-img-top align-self-center imagen-producto" alt="gorra head"/>
+                        <div class="card-body">
+                        <h5 class="card-title">Gorra Head</h5>
+                        <div class="accordion" id="accordion8">
+                            <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
+                                Descripcion
+                                </button>
+                            </h2>
+                            <div id="collapse8" class="accordion-collapse collapse" data-bs-parent="#accordion8">
+                                <div class="accordion-body">
+                                    ¡Lleva la esencia del mundo digital a tu estilo con nuestra exclusiva Gorra "<head>" en blanco sobre negro!
+
+                                        Esta gorra es un tributo a la programación web y al elemento fundamental "<head>" que inicia cada página web. Con un diseño minimalista y elegante, esta gorra se convertirá en el complemento perfecto para tu estilo único y tu pasión por el desarrollo web. Esta gorra es cómoda y resistente al desgaste. El cierre ajustable permite un ajuste perfecto para cualquier tamaño de cabeza.
+                                        Agrega un toque de originalidad y orgullo de desarrollador web a tu guardarropa con esta gorra única. ¡Haz tu pedido hoy mismo y muestra al mundo tu conexión con el emocionante mundo de la programación web!
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    
+                    </div>
+                    <div class="card m-5 p-2" style="width: 18rem">
+                        <img src="/img/img_productos/gorra_dev.jpeg" class="card-img-top align-self-center imagen-producto" alt="gorra dev"/>
+                        <div class="card-body">
+                        <h5 class="card-title">Gorra Dev</h5>
+                        <div class="accordion" id="accordion9">
+                            <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
+                                Descripcion
+                                </button>
+                            </h2>
+                            <div id="collapse9" class="accordion-collapse collapse" data-bs-parent="#accordion9">
+                                <div class="accordion-body">
+                                    ¡Lleva tu pasión por el desarrollo a otro nivel con nuestra exclusiva Gorra "DEV" en blanco sobre negro!
+
+                                    La gorra presenta un diseño elegante y minimalista en color negro que se adapta a cualquier atuendo, desde casual hasta más formal.
+                                    ¿Cuenta con un diseño contemporáneo que incorpora la palabra "DEV" en blanco, destacando tu amor por el desarrollo y la programación. Fabricada con materiales de alta calidad, esta gorra es cómoda y resistente al uso diario. El cierre ajustable garantiza un ajuste perfecto para cualquier tamaño de cabeza.
+                                    ¿Conoces a un entusiasta del desarrollo? Esta gorra es un regalo perfecto que mostrará tu aprecio por su pasión y dedicación.
+                                    Agrega un toque de estilo y orgullo "DEV" a tu guardarropa con esta gorra exclusiva. ¡Haz tu pedido hoy mismo y demuestra al mundo tu compromiso con el desarrollo y la tecnología!
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    
+                    </div>
+                </div>
+            </div>
+    </main>
+
+    <footer>
+        <div class="containers">
+            <div class="contact">
+                <h3>Contactanos</h3>
+                <ul>
+                    <li><i class="fa-solid fa-phone" style="color: #ffffff;"></i> 54933333333333</li>
+                    <li><strong><i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></strong> 0351 5555555555</li>
+                    <li><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> infowolfsoul@gmail.com</li>
+                </ul> <!-- Información de contacto -->
+            </div>
+            <div class="subscribe">
+                    <h4>NEWSLETTER</h4>
+                    <p>¡Recibí todas las ofertas!</p>
+                    <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
+                    <form>
+                        <input type="email" placeholder="Tu Correo">
+                        <button type="submit">Suscribirse</button>
+                    </form> <!-- Form de suscripción con el mail -->
+            </div>
+            <div class="social">
+                <h3>Seguinos en nuestras redes</h3>
+                <ul class="social-icons">
+                    <li>
+                        <a href="https://www.facebook.com/" class="social-link facebook" target="_blank"> <!-- Aca va el link del Facebook -->
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/?lang=es" class="social-link twitter" target="_blank"> <!-- Aca va el link del Twitter -->
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" class="social-link instagram" target="_blank"> <!-- Aca va el link del Instagram -->
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
