--- a/FRONT/drescode_indexes/index.html
+++ b/FRONT/drescode_indexes/index.html
@@ -110,3 +110,48 @@
  
     </section> 
     
+    <section>
+        <footer>
+            <div class="container"> 
+                <div class="contact">
+                    <h3>Contactanos</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-phone" style="color: #ffffff;"></i> 54933333333333</li>
+                        <li><strong><i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></strong> 0351 5555555555</li>
+                        <li><i class="fa-regular fa-envelope" style="color: #ffffff;"></i> infowolfsoul@gmail.com</li>
+                    </ul>
+                </div>
+                <div class="subscribe">
+                        <h4>NEWSLETTER</h4>
+                        <p>¡Recibí todas las ofertas!</p>
+                        <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
+                        <form>
+                            <input type="email" placeholder="Tu Correo">
+                            <button type="submit">Suscribirse</button>
+                        </form>
+                </div>
+                <div class="social">
+                    <h3>Seguinos en nuestras redes</h3>
+                    <ul class="social-icons">
+                        <li>
+                            <a href="https://www.facebook.com/" class="social-link facebook" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/?lang=es" class="social-link twitter" target="_blank">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/" class="social-link instagram" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </section>
+    </body>
+    </html>
