gestion de pag quienes somos

--- a/FRONT/drescode_indexes/quienes_somos.html
+++ b/FRONT/drescode_indexes/quienes_somos.html
@@ -3,9 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Quienes Somos</title>
+
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <div class="logo">
+
+            <img src="../img/logo.jpeg" alt="logo">
+        </div>   
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="quienes_somos.html">Sobre Nosotros</a></li>
+                <!-- <li><a href="#">Contacto</a></li> -->
+            </ul>
+        </nav>
+    </header>
+    <section id="hero">
+        <div id="hero-texto">
+            <h2>Bienvenido a Dress Code!</h2>
+            <nav>
+                <h4>
+                    <ul>
+                        <li><a href="#somos">Conocenos</a> | </li>
+                        <li><a href="#galeria">Galeria</a> | </li>   
+                        <li><a href="#envios">Envíos</a> | </li>   
+                        <li><a href="#redes_soc">Contacto</a> | </li>   
+                        <li><a href="#programadores">Team</a> | </li> 
+                    </ul>
+                </h4>  
+            </nav>  
+        </div>
+        <div id="heroimagen">
+            <img  src="../img/img_quienes_somos/gente_posando.png" alt="personas posando">    
+        </div>
+    </section>
+	<section id ="somos">
+        <div class="conteiner">
+            <div class="img-conteiner"></div>
+                <div class="paquete">
+                   <div class="img-paquete">
+                        <img src="../img/img_quienes_somos/casa.png" alt="casa">
+                    </div> 
+                    <h2>Conocenos!</h2>
+                    <p>Somos estudiantes de programación, amantes de la moda y el estilo #Code</p>
+                    <p>Como todo apasionado decidimos emprender este viaje de no retorno!</p>
+                    <p>Nuestra meta: que el mundo de la programación y la moda tenga su espacio único de la mano de Dress Code.</p>
+                </div>
+
+        </div>
+    </section>   
+    <section id ="galeria">
+        <div class="conteiner">
+            <div class="paquete">
+                <div class="img-paquete">
+                    <img src="../img/img_quienes_somos/lupa.png" alt="lupa">
+                </div>
+                <h2>explora la galeria</h2>
+                <p>En nuestra tienda, encontrarás una amplia gama de <a href="#productos.html">productos</a>
+                diseñados exclusivamente para programadores y entusiastas de la tecnología. 
+                Desde camisetas con ingeniosos chistes sobre programación hasta sudaderas con capucha con estampados de código binario, tenemos algo para todos los gustos..</p><br><br>
+                <form action="productos.html">
+                    <button>galeria</button>
+                </form><br>
+            </div>
+            <div class="img-conteiner"></div>
+            
+        </div>    
+    </section>
