agregue comentarios en el Html,

--- a/FRONT/drescode_indexes/quienes_somos.html
+++ b/FRONT/drescode_indexes/quienes_somos.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-    <section id="hero">
+    <section id="hero"><!--esta seccion la hice con grid y a los hipervinculos que direccionan en secciones de la pagina, le agregue un deslizamiento suave para que no sea tan brusco--> 
         <div id="hero-texto">
             <h2>Bienvenido a Dress Code!</h2>
             <nav>
@@ -40,8 +40,8 @@
         <div id="heroimagen">
             <img  src="../img/img_quienes_somos/gente_posando.png" alt="personas posando">    
         </div>
-    </section>
-	<section id ="somos">
+    </section> 
+	<section id ="somos"> 
         <div class="conteiner">
             <div class="img-conteiner"></div>
                 <div class="paquete">
@@ -103,7 +103,7 @@
             <div class="img-conteiner"></div>
     
         </section>
-        <section id= "programadores">
+        <section id= "programadores"><!-- Esta seccion la hice con grid, haciendo a su vez que sea responsive-->
             
             <div class="conteiner">
                 <div class="titulo_team"><h2>Developer Team</h2>    </div> 
