--- a/FRONT/drescode_indexes/index.html
+++ b/FRONT/drescode_indexes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/FRONT/css/landing.css"> 
+    <link rel="stylesheet" href="../css/landing.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Dress Code</title>
 </head>
