--- a/FRONT/drescode_indexes/productos.html
+++ b/FRONT/drescode_indexes/productos.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DressCode</title>
-    <link rel="stylesheet" href="/FRONT/css/productos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Enlace a la fuente de iconos Font Awesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Enlace a la fuente de iconos Font Awesome -->
+    
 </head>
 <body id="background">
     <header>
@@ -18,9 +17,9 @@
         </div>   
         <nav>
             <ul>
-                <li><a href="/FRONT/drescode_indexes/index.html">Inicio</a></li>
-                <li><a href="/FRONT/drescode_indexes/productos.html">Productos</a></li>
-                <li><a href="/FRONT/drescode_indexes/quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="../drescode_indexes/index.html">Inicio</a></li>
+                <li><a href="../drescode_indexes/productos.html">Productos</a></li>
+                <li><a href="../drescode_indexes/quienes_somos.html">Sobre Nosotros</a></li>
                 <!-- <li><a href="#">Contacto</a></li> -->
             </ul>
         </nav>
