--- a/FRONT/drescode_indexes/index.html
+++ b/FRONT/drescode_indexes/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/FRONT/img/logo.jpeg" alt="logo">
+            <img src="../img/logo.jpeg" alt="logo">
         </div>   
         <nav>
             <ul>
