Corrección de href

--- a/FRONT/drescode_indexes/quienes_somos.html
+++ b/FRONT/drescode_indexes/quienes_somos.html
@@ -15,9 +15,9 @@
         </div>   
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./productos.html">Productos</a></li>
+                <li><a href="./quienes_somos.html">Sobre Nosotros</a></li>
                 <!-- <li><a href="#">Contacto</a></li> -->
             </ul>
         </nav>
@@ -66,7 +66,7 @@
                 <p>En nuestra tienda, encontrarás una amplia gama de <a href="#productos.html">productos</a>
                 diseñados exclusivamente para programadores y entusiastas de la tecnología. 
                 Desde camisetas con ingeniosos chistes sobre programación hasta sudaderas con capucha con estampados de código binario, tenemos algo para todos los gustos..</p><br><br>
-                <form action="productos.html">
+                <form action="./productos.html">
                     <button>galeria</button>
                 </form><br>
             </div>
