Se agregan carpetas, archivos e imagenes del login
Se agrega archivo javascript del login en su respectiva carpeta.
Se sube archivo login.css e incorporación del style del login en LandingPage.css para el index.html
-Se sube archivo login.html y parte del código.

--- a/FRONT/drescode_indexes/productos.html
+++ b/FRONT/drescode_indexes/productos.html
@@ -17,6 +17,7 @@
         </div>   
         <nav>
             <ul>
+                <li><a href="./Login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
                 <li><a href="../drescode_indexes/index.html">Inicio</a></li>
                 <li><a href="../drescode_indexes/productos.html">Productos</a></li>
                 <li><a href="../drescode_indexes/quienes_somos.html">Sobre Nosotros</a></li>
