--- a/FRONT/drescode_indexes/quienes_somos.html
+++ b/FRONT/drescode_indexes/quienes_somos.html
@@ -15,6 +15,7 @@
         </div>   
         <nav>
             <ul>
+                <li><a href="./Login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./productos.html">Productos</a></li>
                 <li><a href="./quienes_somos.html">Sobre Nosotros</a></li>
