Correccion en urls de imagenes landing.css. agregado de validaciones html faltantes. Se agrega usuario y contraseña accesibles en el login

--- a/FRONT/drescode_indexes/index.html
+++ b/FRONT/drescode_indexes/index.html
@@ -49,13 +49,14 @@
                                 Email:Juan@gmail.com / Contraseña:1234!Milan   -->
                                 <label>
                                     <i class='bx bx-envelope' ></i>
-                                    <input type="email" placeholder="Correo Electronico" id="email-login">
+                                    <input type="email" placeholder="Correo Electronico" id="email-login" required>
                                 </label>
                                 <label>
                                     <i class='bx bx-lock-alt' ></i>
-                                    <input type="password" placeholder="Contraseña" id="contraseña">
+                                    <input type="password" placeholder="Contraseña" id="contraseña" required>
                                 </label>
                                 <input type="submit" value="Iniciar Sesión" id="user-log">
+                                <p>Email:Juan@gmail.com / Contraseña:1234!Milan</p>
                             </form>
                         </div>
                     </div>
