--- a/FRONT/drescode_indexes/login.html
+++ b/FRONT/drescode_indexes/login.html
@@ -45,19 +45,19 @@
                 <form>
                     <label>
                         <i class='bx bx-user' ></i>
-                        <input type="text" placeholder="Nombre Completo" id="name">
+                        <input type="text" placeholder="Nombre Completo" id="name" required>
                     </label>
                     <label>
                         <i class='bx bx-envelope' ></i>
-                        <input type="email" placeholder="Correo Electronico" id="email">
+                        <input type="email" placeholder="Correo Electronico" id="email" required>
                     </label>
                     <label>
                         <i class='bx bx-envelope'></i>
-                        <input type="password" placeholder="Contraseña" id="clave">
+                        <input type="password" placeholder="Contraseña" id="clave" required minlength="8" maxlength="16">
                     </label>
                     <label>
                         <i class='bx bx-envelope'></i>
-                        <input type="password" placeholder="Repite la Contraseña" id="clave-repite">
+                        <input type="password" placeholder="Repite la Contraseña" id="clave-repite" required>
                     </label>
                  
                     <input type="submit" value="registrarse" id="user-registrar">
@@ -85,13 +85,14 @@
                 <form>
                     <label>
                         <i class='bx bx-envelope' ></i>
-                        <input type="email" placeholder="Correo Electronico" id="email-login">
+                        <input type="email" placeholder="Correo Electronico" id="email-login" required>
                     </label>
                     <label>
                         <i class='bx bx-lock-alt' ></i>
-                        <input type="password" placeholder="Contraseña" id="contraseña">
+                        <input type="password" placeholder="Contraseña" id="contraseña" required>
                     </label>
                     <input type="submit" value="Iniciar Sesión" id="user-log">
+                    <p>Email:Juan@gmail.com / Contraseña:1234!Milan</p>
                 </form>
             </div>
         </div>
