--- a/FRONT/drescode_indexes/login.html
+++ b/FRONT/drescode_indexes/login.html
@@ -16,7 +16,7 @@
         </div>   
         <nav>
             <ul class="login-ingreso">
-                <li><a href="./Login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
+                <li><a href="./login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./productos.html">Productos</a></li>
                 <li><a href="./quienes_somos.html">Sobre Nosotros</a></li>
