--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/landing.css">
+    <link rel="stylesheet" href="./FRONT/css/landing.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Dress Code</title>
@@ -16,10 +16,10 @@
         </div>   
         <nav>
             <ul>
-                <li><a href="./login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="../login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../productos.html">Productos</a></li>
+                <li><a href="../quienes_somos.html">Sobre Nosotros</a></li>
             
             </ul>
         </nav>
