--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../img/logo.jpeg" alt="logo">
+            <img src="./FRONT/img/logo.jpeg" alt="logo">
         </div>   
         <nav>
             <ul>
-                <li><a href="../login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../productos.html">Productos</a></li>
-                <li><a href="../quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="./FRONT/pages/login.html"><img src="./FRONT/img/img_login/login-icon.png" alt=""></a></li>
+                <li><a href="./FRONT/pages/index.html">Inicio</a></li>
+                <li><a href="./FRONT/pages/productos.html">Productos</a></li>
+                <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
             
             </ul>
         </nav>
@@ -194,6 +194,6 @@
         </footer>
     </section>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script   src="../javascript/login.js"></script>
+    <script   src="./FRONT/javascript/login.js"></script>
     </body>
     </html>
