--- a/FRONT/pages/login.html
+++ b/FRONT/pages/login.html
@@ -16,10 +16,10 @@
         </div>   
         <nav>
             <ul class="login-ingreso">
-                <li><a href="./login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
+                <li><a href="./FRONT/pages/login.html"><img src="../FRONT/img/img_login/login-icon.png" alt=""></a></li>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="./FRONT/pages/productos.html">Productos</a></li>
+                <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
                 <!-- <li><a href="#">Contacto</a></li> -->
             </ul>
         </nav>
