--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="./FRONT/pages/login.html"><img src="./FRONT/img/img_login/login-icon.png" alt=""></a></li>
-                <li><a href="./FRONT/pages/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./FRONT/pages/productos.html">Productos</a></li>
                 <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
             
@@ -194,6 +194,6 @@
         </footer>
     </section>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script   src="./FRONT/javascript/login.js"></script>
+    <script   src="../FRONT/javascript/login.js"></script>
     </body>
     </html>
