--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
         </footer>
     </section>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script   src="../FRONT/javascript/login.js"></script>
+    <script   src="./FRONT/javascript/login.js"></script>
     </body>
     </html>
