--- a/FRONT/pages/productos.html
+++ b/FRONT/pages/productos.html
@@ -17,10 +17,10 @@
         </div>   
         <nav>
             <ul>
-                <li><a href="./login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
-                <li><a href="../drescode_indexes/index.html">Inicio</a></li>
-                <li><a href="../drescode_indexes/productos.html">Productos</a></li>
-                <li><a href="../drescode_indexes/quienes_somos.html">Sobre Nosotros</a></li>
+                <li><a href="../login.html"><img src="../img/img_login/login-icon.png" alt=""></a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../productos.html">Productos</a></li>
+                <li><a href="../quienes_somos.html">Sobre Nosotros</a></li>
                 <!-- <li><a href="#">Contacto</a></li> -->
             </ul>
         </nav>
