--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="./FRONT/pages/login.html"><img src="./FRONT/img/img_login/login-icon.png" alt=""></a></li>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./FRONT/pages/productos.html">Productos</a></li>
                 <li><a href="./FRONT/pages/quienes_somos.html">Sobre Nosotros</a></li>
             
@@ -33,7 +33,7 @@
                         <div class="info-childs">
                             <h2>¡Bienvenido!</h2>
                             <p>  Si no tienes usuario, registrate y únete a la comunidad Dresscode!</p>
-                            <input type="button" onclick="location.href='./login.html'" value="registrarse">
+                            <input type="button" onclick="location.href='./FRONT/pages/login.html'" value="registrarse">
                         </div>
                     </div>
                     <div class="form-information">
